feat: making algorithms async.